Marginal edit to report, AF thresholds

--- a/assignment2/report.tex
+++ b/assignment2/report.tex
@@ -446,7 +446,7 @@ Here are the resulting parameters for each patient, where the left column for ea
   \label{tab:addlabel}%
 \end{table}%
 
-
+\clearpage
 
 \section{Conclusions}
 
